--- a/index.html
+++ b/index.html
@@ -21,39 +21,36 @@
     </script>
 
     <!-- the function to be tested -->
-    <script src="greet.js" charset="utf-8"></script>
-    <script src="isFromBellville.js" charset="utf-8"></script>
-	<script src="regCheck.js" charset="utf-8"></script>
-	<script src="countRegNumber.js" charset="utf-8"></script>
-	<script src="isWeekday.js" charset="utf-8"></script>
-    <script src="yearsAgo.js" charset="utf-8"></script>
-    <script src="countAllPaarl.js" charset="utf-8"></script>
-    <script src="countAllFromTown.js" charset="utf-8"></script>
-    <script src="transportFee.js" charset="utf-8"></script>
-    <script src="totalPhoneBill.js" charset="utf-8"></script>
-    <script src="" charset="utf-8"></script>
-    <script src="findItemsOver20.js" charset="utf-8"></script>
-    <script src="findItemsOver.js" charset="utf-8"></script>
-    <script src="" charset="utf-8"></script>
-    <script src="" charset="utf-8"></script> 
-    <script src="" charset="utf-8"></script>
+    <script src="greet.js"></script>
+    <script src="isFromBellville.js"></script>
+	<script src="regCheck.js"></script>
+	<script src="countRegNumber.js"></script>
+	<script src="isWeekday.js"></script>
+    <script src="yearsAgo.js"></script>
+    <script src="countAllPaarl.js"></script>
+    <script src="countAllFromTown.js"></script>
+    <script src="transportFee.js"></script>
+    <script src="totalPhoneBill.js"></script>
+    <script src="fromWhere.js"></script>
+    <script src="findItemsOver20.js"></script>
+    <script src="findItemsOver.js"></script>
+    <script src="mostProfitableDepartment.js"></script>
 
     <!-- followed by the tests -->
-    <script src="test/greet.test.js" charset="utf-8"></script>
-    <script src="test/isFromBellville.test.js" charset="utf-8"></script>
-    <script src="test/regCheck.test.js" charset="utf-8"></script>
-    <script src="test/countRegNumber.test.js" charset="utf-8"></script>
-    <script src="test/isWeekday.test.js" charset="utf-8"></script>
-    <script src="test/yearsAgo.test.js" charset="utf-8"></script>
-    <script src="test/countAllPaarl.test.js" charset="utf-8"></script>
-    <script src="test/countAllFromTown.test.js" charset="utf-8"></script>
-    <script src="test/transportFee.test.js" charset="utf-8"></script>
-    <script src="test/totalPhoneBill.test.js" charset="utf-8"></script>
-    <script src="" charset="utf-8"></script>
-    <script src="test/findItemsOver20.test.js" charset="utf-8"></script>
-    <script src="test/findItemsOver.test.js" charset="utf-8"></script>
-    <script src="" charset="utf-8"></script>
-    <script src="" charset="utf-8"></script>
+    <script src="test/greet.test.js"></script>
+    <script src="test/isFromBellville.test.js"></script>
+    <script src="test/regCheck.test.js"></script>
+    <script src="test/countRegNumber.test.js"></script>
+    <script src="test/isWeekday.test.js"></script>
+    <script src="test/yearsAgo.test.js"></script>
+    <script src="test/countAllPaarl.test.js"></script>
+    <script src="test/countAllFromTown.test.js"></script>
+    <script src="test/transportFee.test.js"></script>
+    <script src="test/totalPhoneBill.test.js"></script>
+    <script src="test/fromWhere.test.js"></script>
+    <script src="test/findItemsOver20.test.js"></script>
+    <script src="test/findItemsOver.test.js"></script>
+    <script src="test/mostProfitableDepartment.test.js"></script>
     <script>
         <!-- configure and run mocha -->
         mocha.checkLeaks();
